can now disable a specific cookie type by setting settings.cookies._type_here_ : false  rightclick while dragging cancels drag'n'drop (by ali1024)  CSS rewrite for inline-block, instead of float - speed gain and drag&drop fixes  $.tree_focused() replaces tree_component.focusInst()  $.tree_create() replaces new tree_component(). No more leakage to the global name space. (by Johan "Spocke" Sörlin)  leakage of i and j variables fixed. (by Johan "Spocke" Sörlin)  wrapped in anonymous function (by Johan "Spocke" Sörlin)  added onselect, ondeselect callbacks  context menu in FF3 (linux) fixed (by KasperNyboHansen)  if theme_name is false, no CSS file is included, only images are looked up in theme_path (by groogs)
git-svn-id: http://jstree.googlecode.com/svn/trunk@81 7ee4f3fb-cb41-0410-822c-dd8830bd4fbc

--- a/source/themes/default/style.css
+++ b/source/themes/default/style.css
@@ -88,6 +88,10 @@
 .tree .tree-default .context a.disabled,
 .tree .tree-default .context a.disabled:hover {
 	color:silver;
+	opacity:0.5;
+	-ms-filter:'alpha(opacity=50)';
+	filter:alpha(opacity=50);
+	zoom:1;
 }
 
 .tree .tree-default .context .separator {
