--- a/source/tree_component.css
+++ b/source/tree_component.css
@@ -10,16 +10,13 @@
 	line-height:18px;
 	padding:0 0 0 15px;
 	margin:0 0 0 0;
-	clear:both;
 }
 .tree li ul {
 	display:none;
-	clear:both;
 }
 .tree li a,
 .tree li span {
-	display:inline;
-	float:left;
+	display:inline-block;
 	line-height:16px;
 	height:16px;
 	padding:1px 4px 1px 23px !important;
@@ -29,7 +26,9 @@
 	background-color:transparent;
 	background-repeat:no-repeat;
 	background-position:4px 1px; 
+	border-radius:3px;
 	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
 	border:0;
 	margin:0;
 }
@@ -100,7 +99,6 @@
 /* OPEN OR CLOSE */
 .tree li.open ul {
 	display:block;
-	clear:both;
 }
 .tree li.closed ul {
 	display:none !important;
@@ -128,14 +126,19 @@
 }
 
 /* HACKY-HACKY */
-/* EXPLORER 7 */
+/* FIREFOX 2 */
+.tree li a, x:-moz-any-link { display:inline; float:left; }
+.tree li, .tree li ul, .tree li.open ul, x:-moz-any-link { clear:both; }
+.tree li a, x:-moz-any-link, x:default { display:inline-block; float:none; }
+.tree li, .tree li ul, .tree li.open ul, x:-moz-any-link, x:default { clear:none; }
+/* EXPLORER 7 
 *:first-child+html .tree li {
 	margin-bottom:-2px;
 } 
 *:first-child+html .tree li ul {
 	padding-bottom:2px;
-}
-/* EXPLORER 6 */
+} */
+/* EXPLORER 6 
 .tree li {
 	_width:50%;
 	_margin-bottom:-2px;
@@ -144,6 +147,15 @@
 	_padding-bottom:2px;
 }
 
+.tree li a {
+	_zoom:1;
+	_float:none;
+	_display:inline-block;
+}
+*:first-child+html .tree li a {
+	float:none;
+	
+}*/
 /* 
  * FF & OPERA FIXES
 .tree li:not([class="xxx"]) {
